Improved notification functionality